spi_directio/vitis_files/spi_master/spi_master/logs/hls_run_csim_70976.backup.log
  **** HLS Build v2024.2 5238294
INFO: [HLS 200-2005] Using work_dir C:/Users/linds/OneDrive/Desktop/2024-2025_Semester_1/GIM/GIM-2024-2025/spi_directio/vitis_files/spi_master/spi_master 
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'syn.file=C:/testing_comm/spi_directio/vitis_files/dut.cpp' from C:/Users/linds/OneDrive/Desktop/2024-2025_Semester_1/GIM/GIM-2024-2025/spi_directio/vitis_files/spi_master/hls_config.cfg(10)
INFO: [HLS 200-10] Adding design file 'C:/testing_comm/spi_directio/vitis_files/dut.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=C:/testing_comm/spi_directio/vitis_files/tb.cpp' from C:/Users/linds/OneDrive/Desktop/2024-2025_Semester_1/GIM/GIM-2024-2025/spi_directio/vitis_files/spi_master/hls_config.cfg(11)
INFO: [HLS 200-10] Adding test bench file 'C:/testing_comm/spi_directio/vitis_files/tb.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file_cflags=C:/testing_comm/spi_directio/vitis_files/tb.cpp,-D HW_COSIM' from C:/Users/linds/OneDrive/Desktop/2024-2025_Semester_1/GIM/GIM-2024-2025/spi_directio/vitis_files/spi_master/hls_config.cfg(12)
INFO: [HLS 200-1465] Applying ini 'syn.top=spi_master' from C:/Users/linds/OneDrive/Desktop/2024-2025_Semester_1/GIM/GIM-2024-2025/spi_directio/vitis_files/spi_master/hls_config.cfg(7)
INFO: [HLS 200-1465] Applying ini 'flow_target=vivado' from C:/Users/linds/OneDrive/Desktop/2024-2025_Semester_1/GIM/GIM-2024-2025/spi_directio/vitis_files/spi_master/hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'part=xczu3eg-sfvc784-1-e' from C:/Users/linds/OneDrive/Desktop/2024-2025_Semester_1/GIM/GIM-2024-2025/spi_directio/vitis_files/spi_master/hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xczu3eg-sfvc784-1-e'
INFO: [HLS 200-1465] Applying ini 'clock=10ns' from C:/Users/linds/OneDrive/Desktop/2024-2025_Semester_1/GIM/GIM-2024-2025/spi_directio/vitis_files/spi_master/hls_config.cfg(8)
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-1465] Applying ini 'clock_uncertainty=2ns' from C:/Users/linds/OneDrive/Desktop/2024-2025_Semester_1/GIM/GIM-2024-2025/spi_directio/vitis_files/spi_master/hls_config.cfg(9)
INFO: [SYN 201-201] Setting up clock 'default' with an uncertainty of 2ns.
INFO: [HLS 200-1465] Applying ini 'csim.code_analyzer=1' from C:/Users/linds/OneDrive/Desktop/2024-2025_Semester_1/GIM/GIM-2024-2025/spi_directio/vitis_files/spi_master/hls_config.cfg(13)
INFO: [HLS 200-1465] Applying ini 'package.output.format=ip_catalog' from C:/Users/linds/OneDrive/Desktop/2024-2025_Semester_1/GIM/GIM-2024-2025/spi_directio/vitis_files/spi_master/hls_config.cfg(5)
INFO: [SIM 211-200] Executing Code Analyzer instead of classic HLS C simulation
INFO: [HLS 211-200] Compiling source code C:/testing_comm/spi_directio/vitis_files/dut.cpp as hardware code with instrumentation
INFO: [HLS 211-200] Compiling source code C:/testing_comm/spi_directio/vitis_files/tb.cpp as test bench code with instrumentation
INFO: [HLS 211-200] Compiling source code C:/testing_comm/spi_directio/vitis_files/dut.cpp as test bench code with instrumentation
In file included from C:/testing_comm/spi_directio/vitis_files/dut.cpp:1:
In file included from C:/testing_comm/spi_directio/vitis_files/dut.h:20:
c:\xilinx\vitis\2024.2\vcxx\data\autopilot/hls_directio.h:9:2: error: ERROR: [HLS 211-200] hls_directio.h is not supported by Code Analyzer C simulation
#error ERROR: [HLS 211-200] hls_directio.h is not supported by Code Analyzer C simulation
 ^
c:\xilinx\vitis\2024.2\vcxx\data\autopilot/hls_directio.h:40:7: error: use of undeclared identifier '_STREAM_UNUSED_PARAM'
      _STREAM_UNUSED_PARAM(name);
      ^
c:\xilinx\vitis\2024.2\vcxx\data\autopilot/hls_directio.h:119:39: error: use of undeclared identifier '_STREAM_UNUSED_PARAM'
    void set_name(const char* name) { _STREAM_UNUSED_PARAM(name); }
                                      ^
C:/testing_comm/spi_directio/vitis_files/dut.cpp:14:32: warning: unexpected pragma argument 'set_in', expects ap_none/ap_vld/ap_ack/ap_hs/ap_ovld/ap_fifo/ap_memory/bram/axis/s_axilite/m_axi/ap_ctrl_none/ap_ctrl_hs/ap_ctrl_chain/ap_stable/ [-Winvalid-hls-pragmas]
    #pragma HLS INTERFACE mode=set_in
                               ^
1 warning and 3 errors generated.
slxcmd:0:0: warning: Non-zero exit code: 1 returned by 'INFO: [HLS 211-200] Compiling source code C:/testing_comm/spi_directio/vitis_files/dut.cpp as hardware code with instrumentation'
ERROR: [SIM 211-200] Code Analyzer execution failed. Consider running the classic C simulation instead by disabling the hls.csim.code_analyzer option in the config file.
ERROR: Problem running csim: child process exited abnormally
INFO: [HLS 200-112] Total CPU user time: 1 seconds. Total CPU system time: 1 seconds. Total elapsed time: 11.988 seconds; peak allocated memory: 619.730 MB.
